# platformer_game

./: .gitmodules  CMakeLists.txt  README.md  init_cmake.sh
src/: main.cpp
src/graphics/: graphics_manager.cpp  graphics_manager.h
src/graphics/content/: content_manager.cpp  content_manager.h
src/input_manager/: input_manager.cpp  input_manager.h  input_manager_observer.cpp  input_manager_observer.h
src/logic/actor/: actor.cpp  actor.h  dynamic_actor.cpp  dynamic_actor.h  player_actor.cpp  player_actor.h  static_actor.cpp  static_actor.h
src/logic/controller/: controller.cpp  controller.h
src/logic/game_clock/: game_clock.cpp  game_clock.h
src/logic/logic_manager/: logic_manager.cpp  logic_manager.h
src/logic/physics_manager/: physics_manager.cpp  physics_manager.h
src/logic/physics_manager/physic_body/: physic_body.cpp  physic_body.h
src/logic/static_actor/: static_actor.cpp  static_actor.h
src/logic/world_generator/: world_generator.cpp  world_generator.h
src/util/: b2GLDraw.cpp  b2GLDraw.h  util.h
